--- a/src/patternfly/components/Toolbar/toolbar-toggle.hbs
+++ b/src/patternfly/components/Toolbar/toolbar-toggle.hbs
@@ -1,15 +1,11 @@
-<div class="{{pfv}}toolbar__toggle{{#if toolbar-toggle--modifier}} {{toolbar-toggle--modifier}}{{/if}}
-  pf-m-show{{ternary toolbar-toogle--at toolbar-toogle--at ''}}
-  {{setModifiers
-
-  }}"
+<div class="{{pfv}}toolbar__toggle{{#if toolbar-toggle--modifier}} {{toolbar-toggle--modifier}}{{/if}}"
   {{#if toolbar-toggle--attribute}}
     {{{toolbar-toggle--attribute}}}
   {{/if}}>
   {{> menu-toggle
-        menu-toggle--icon=(ternary toolbar-toggle--icon toolbar-toggle--icon 'filter')
-        menu-toggle--IsPlain=true
-        menu-toggle--IsExpanded=toolbar-toggle--IsExpanded
-        menu-toggle--attribute=(concat 'aria-label="Show filters" aria-controls="' toolbar--id '-expandable-content"')
-      }}
+      menu-toggle--icon=(ternary toolbar-toggle--icon toolbar-toggle--icon 'filter')
+      menu-toggle--IsPlain=true
+      menu-toggle--IsExpanded=toolbar-expandable-content--IsExpanded
+      menu-toggle--attribute=(concat 'aria-label="Show filters" aria-controls="' toolbar--id '-expandable-content"')
+    }}
 </div>
