--- a/src/patternfly/demos/Toolbar/examples/Toolbar.css
+++ b/src/patternfly/demos/Toolbar/examples/Toolbar.css
@@ -7,3 +7,11 @@
 .ws-html-demos-c-toolbar .pf-v6-c-toolbar__item {
   position: relative;
 }
+
+#ws-html-demos-c-toolbar-toolbar-attribute-value-single-select-filter-on-mobile {
+  min-height: 200px;
+}
+
+#ws-html-demos-c-toolbar-toolbar-attribute-value-search-filter-on-mobile {
+  min-height: 180px;
+}
