--- a/src/patternfly/components/DataList/data-list-check.hbs
+++ b/src/patternfly/components/DataList/data-list-check.hbs
@@ -2,8 +2,5 @@
   {{#if data-list-check--attribute}}
     {{{data-list-check--attribute}}}
   {{/if}}>
-  {{> check
-      check--IsStandalone=true
-      check--IsLabelWrapped=true
-      check--id=(concat data-list--id '-' data-list-item--id '"' data-list-check-checkbox--attribute)}}
+  {{> check check--IsStandalone=true check--IsLabelWrapped=true check--id=(dasherize data-list--id data-list-item--id)}}
 </div>
