--- a/src/patternfly/components/Table/TableCells/table-cell-toggle.hbs
+++ b/src/patternfly/components/Table/TableCells/table-cell-toggle.hbs
@@ -1,4 +1,4 @@
-{{#> table-cell table-cell--classname='__toggle' table-cell--aria-label=(ternary IsThead 'Toggle all rows' 'Toggle all row')}}
+{{#> table-cell table-cell--classname='__toggle' table-cell--aria-label='Row expansion'}}
   {{#> button
     button--IsSmall=table--IsCompact
     button--IsPlain=true
