--- a/src/patternfly/components/Table/Tree-table/table-tree-view--basic.hbs
+++ b/src/patternfly/components/Table/Tree-table/table-tree-view--basic.hbs
@@ -4,8 +4,8 @@
     table--HasIcons=table-tree-view--HasIcons
     table--HasNoPosinset=table-tree-view--HasNoPosinset
   }}
-  {{#> table-thead table-tr--IsExpanded=true}}
-    {{#> table-tr newcontext table--HasActions=table-tree-view--HasActions}}
+  {{#> table-thead}}
+    {{#> table-tr table--HasActions=table-tree-view--HasActions}}
       {{#> table-th table-th--attribute='scope="col"' table-th--modifier=(prefix 'table__tree-view-title-header-cell')}}
         Name
       {{/table-th}}
