--- a/src/patternfly/demos/Table/table-compact-table.hbs
+++ b/src/patternfly/demos/Table/table-compact-table.hbs
@@ -1,7 +1,7 @@
 {{#> table table--id=(concat page--id '-table') table--IsGrid=true table--modifier="pf-m-compact pf-m-grid-lg" table--attribute='aria-label="This is a compact table example"'}}
   {{#> table-thead}}
     {{#> table-tr}}
-      {{> table-cell-empty}}
+      {{> table-cell-empty table-cell--text='Row select'}}
       {{#> table-th table-th--attribute='scope="col"'}}
         Contributor
       {{/table-th}}
