--- a/src/patternfly/components/Wizard/wizard-toggle-list-item.hbs
+++ b/src/patternfly/components/Wizard/wizard-toggle-list-item.hbs
@@ -1,9 +1,12 @@
-<span class="{{pfv}}wizard__toggle-list-item{{#if wizard-toggle-list-item--modifier}} {{wizard-toggle-list-item--modifier}}{{/if}}{{#if wizard-toggle-list-item--IsDanger}} pf-m-danger{{/if}}"
+<span class="{{pfv}}wizard__toggle-list-item
+{{#if wizard-toggle-list-item--IsSuccess}} pf-m-success{{/if}}
+{{#if wizard-toggle-list-item--IsDanger}} pf-m-danger{{/if}}
+{{#if wizard-toggle-list-item--modifier}} {{wizard-toggle-list-item--modifier}}{{/if}}"
   {{#if wizard-toggle-list-item--attribute}}
     {{{wizard-toggle-list-item--attribute}}}
   {{/if}}>
-  {{#if wizard-toggle-list-item--IsDanger}}
-    {{#> wizard-toggle-status-icon}}<i class="fas fa-exclamation-circle" aria-hidden="true"></i>{{/wizard-toggle-status-icon}}
-  {{/if}}
+  {{#ifAny wizard-toggle-list-item--IsSuccess wizard-toggle-list-item--IsDanger}}
+    {{> wizard-toggle-status-icon}}
+  {{/ifAny}}
   {{> @partial-block}}
 </span>
