--- a/src/patternfly/components/Toolbar/toolbar-content-section.hbs
+++ b/src/patternfly/components/Toolbar/toolbar-content-section.hbs
@@ -1,4 +1,4 @@
-{{setProp 'context' 'IsContentSection'}}
+{{setProp 'IsContentSection' true}}
 
 <div class="{{pfv}}toolbar__content-section{{#if toolbar-content-section--modifier}} {{toolbar-content-section--modifier}}{{/if}}"
   {{#if toolbar-content-section--attribute}}
