--- a/src/patternfly/components/Toolbar/toolbar-expandable-content.hbs
+++ b/src/patternfly/components/Toolbar/toolbar-expandable-content.hbs
@@ -1,4 +1,4 @@
-{{setProp 'context' 'IsExpandableContentSection'}}
+{{setProp 'IsExpandableContentSection' true}}
 
 <div class="{{pfv}}toolbar__expandable-content{{#if toolbar-expandable-content--modifier}} {{toolbar-expandable-content--modifier}}{{/if}}
   {{#if toolbar-expandable-content--IsExpanded}} pf-m-expanded{{/if}}
