feat(tokens): use rems instead of px for most sizes

--- a/src/patternfly/base/tokens/tokens-default.scss
+++ b/src/patternfly/base/tokens/tokens-default.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Fri, 21 Jun 2024 21:25:18 GMT
+// Generated on Tue, 02 Jul 2024 19:57:50 GMT
 
 @mixin pf-v6-tokens {
   --pf-t--global--background--color--500: rgba(21, 21, 21, 0.2000);
@@ -35,15 +35,15 @@
   --pf-t--global--box-shadow--color--100: rgba(0, 0, 0, 0.1600);
   --pf-t--global--box-shadow--color--200: rgba(0, 0, 0, 0.1200);
   --pf-t--global--box-shadow--spread--100: 0px;
-  --pf-t--global--breakpoint--100: 0px;
-  --pf-t--global--breakpoint--200: 576px;
-  --pf-t--global--breakpoint--250: 640px;
-  --pf-t--global--breakpoint--300: 768px;
-  --pf-t--global--breakpoint--350: 960px;
-  --pf-t--global--breakpoint--400: 992px;
-  --pf-t--global--breakpoint--500: 1200px;
-  --pf-t--global--breakpoint--550: 1280px;
-  --pf-t--global--breakpoint--600: 1450px;
+  --pf-t--global--breakpoint--100: 0rem;
+  --pf-t--global--breakpoint--200: 36rem;
+  --pf-t--global--breakpoint--250: 40rem;
+  --pf-t--global--breakpoint--300: 48rem;
+  --pf-t--global--breakpoint--350: 60rem;
+  --pf-t--global--breakpoint--400: 62rem;
+  --pf-t--global--breakpoint--500: 75rem;
+  --pf-t--global--breakpoint--550: 80rem;
+  --pf-t--global--breakpoint--600: 90.625rem;
   --pf-t--global--delay--100: 0ms;
   --pf-t--global--delay--200: 50ms;
   --pf-t--global--delay--300: 100ms;
@@ -55,37 +55,41 @@
   --pf-t--global--duration--50: 50ms;
   --pf-t--global--duration--500: 500ms;
   --pf-t--global--duration--600: 600ms;
-  --pf-t--global--font--family--100: "Red Hat Text VF";
-  --pf-t--global--font--family--200: "Red Hat Display VF";
-  --pf-t--global--font--family--300: "Red Hat Mono VF";
+  --pf-t--global--font--family--100: "Red Hat Text", "RedHatText", "Noto Sans Arabic", "Noto Sans Hebrew", "Noto Sans JP", "Noto Sans KR", "Noto Sans Malayalam", "Noto Sans SC", "Noto Sans TC", "Noto Sans Thai", helvetica, arial, sans-serif;
+  --pf-t--global--font--family--200: "Red Hat Display", "RedHatDisplay", "Noto Sans Arabic", "Noto Sans Hebrew", "Noto Sans JP", "Noto Sans KR", "Noto Sans Malayalam", "Noto Sans SC", "Noto Sans TC", "Noto Sans Thai", helvetica, arial, sans-serif;
+  --pf-t--global--font--family--300: "Red Hat Mono", "RedHatMono", "Courier New", courier, monospace;
   --pf-t--global--font--line-height--100: 1.3;
   --pf-t--global--font--line-height--200: 1.5;
-  --pf-t--global--font--size--100: 12px;
-  --pf-t--global--font--size--200: 14px;
-  --pf-t--global--font--size--300: 16px;
-  --pf-t--global--font--size--400: 18px;
-  --pf-t--global--font--size--500: 20px;
-  --pf-t--global--font--size--600: 22px;
-  --pf-t--global--font--size--700: 28px;
-  --pf-t--global--font--size--800: 36px;
+  --pf-t--global--font--size--100: 0.75rem;
+  --pf-t--global--font--size--200: 0.875rem;
+  --pf-t--global--font--size--300: 1rem;
+  --pf-t--global--font--size--400: 1.125rem;
+  --pf-t--global--font--size--500: 1.25rem;
+  --pf-t--global--font--size--600: 1.375rem;
+  --pf-t--global--font--size--700: 1.75rem;
+  --pf-t--global--font--size--800: 2.25rem;
   --pf-t--global--font--weight--100: 400;
   --pf-t--global--font--weight--200: 500;
   --pf-t--global--font--weight--300: 700;
   --pf-t--global--font--weight--400: 700;
-  --pf-t--global--icon--size--100: 12px;
-  --pf-t--global--icon--size--200: 14px;
-  --pf-t--global--icon--size--250: 16px;
-  --pf-t--global--icon--size--300: 22px;
-  --pf-t--global--icon--size--400: 56px;
-  --pf-t--global--icon--size--500: 96px;
-  --pf-t--global--spacer--100: 4px;
-  --pf-t--global--spacer--200: 8px;
-  --pf-t--global--spacer--300: 16px;
-  --pf-t--global--spacer--400: 24px;
-  --pf-t--global--spacer--500: 32px;
-  --pf-t--global--spacer--600: 48px;
-  --pf-t--global--spacer--700: 64px;
-  --pf-t--global--spacer--800: 80px;
+  --pf-t--global--icon--size--100: 0.75rem;
+  --pf-t--global--icon--size--200: 0.875rem;
+  --pf-t--global--icon--size--250: 1rem;
+  --pf-t--global--icon--size--300: 1.375rem;
+  --pf-t--global--icon--size--400: 3.5rem;
+  --pf-t--global--icon--size--500: 6rem;
+  --pf-t--global--spacer--100: 0.25rem;
+  --pf-t--global--spacer--200: 0.5rem;
+  --pf-t--global--spacer--300: 1rem;
+  --pf-t--global--spacer--400: 1.5rem;
+  --pf-t--global--spacer--500: 2rem;
+  --pf-t--global--spacer--600: 3rem;
+  --pf-t--global--spacer--700: 4rem;
+  --pf-t--global--spacer--800: 5rem;
+  --pf-t--global--text-decoration--line--100: none;
+  --pf-t--global--text-decoration--line--200: underline;
+  --pf-t--global--text-decoration--style--100: solid;
+  --pf-t--global--text-decoration--style--200: dashed;
   --pf-t--global--timing-function--100: cubic-bezier(.4, 0, .7, .2);
   --pf-t--global--timing-function--200: cubic-bezier(.4, 0, .2, 1);
   --pf-t--global--timing-function--300: cubic-bezier(0, 0, .2, 1);
@@ -286,6 +290,18 @@
   --pf-t--global--text--color--link--100: var(--pf-t--color--blue--50);
   --pf-t--global--text--color--link--200: var(--pf-t--color--blue--60);
   --pf-t--global--text--color--link--300: var(--pf-t--color--purple--50);
+  --pf-t--global--text-decoration--editable-text--line--default: var(--pf-t--global--text-decoration--line--200);
+  --pf-t--global--text-decoration--editable-text--line--hover: var(--pf-t--global--text-decoration--line--200);
+  --pf-t--global--text-decoration--editable-text--style--default: var(--pf-t--global--text-decoration--style--200);
+  --pf-t--global--text-decoration--editable-text--style--hover: var(--pf-t--global--text-decoration--style--200);
+  --pf-t--global--text-decoration--help-text--line--default: var(--pf-t--global--text-decoration--line--200);
+  --pf-t--global--text-decoration--help-text--line--hover: var(--pf-t--global--text-decoration--line--200);
+  --pf-t--global--text-decoration--help-text--style--default: var(--pf-t--global--text-decoration--style--200);
+  --pf-t--global--text-decoration--help-text--style--hover: var(--pf-t--global--text-decoration--style--200);
+  --pf-t--global--text-decoration--link--line--default: var(--pf-t--global--text-decoration--style--200);
+  --pf-t--global--text-decoration--link--line--hover: var(--pf-t--global--text-decoration--style--200);
+  --pf-t--global--text-decoration--link--style--default: var(--pf-t--global--text-decoration--style--100);
+  --pf-t--global--text-decoration--link--style--hover: var(--pf-t--global--text-decoration--style--100);
   --pf-t--global--z-index--2xl: var(--pf-t--global--z-index--600);
   --pf-t--global--z-index--lg: var(--pf-t--global--z-index--400);
   --pf-t--global--z-index--md: var(--pf-t--global--z-index--300);
@@ -438,6 +454,8 @@
   --pf-t--global--spacer--action--horizontal--plain: var(--pf-t--global--spacer--sm);
   --pf-t--global--spacer--action--horizontal--spacious: var(--pf-t--global--spacer--xl);
   --pf-t--global--spacer--action--vertical--compact: var(--pf-t--global--spacer--xs);
+  --pf-t--global--spacer--action--vertical--default: var(--pf-t--global--spacer--sm);
+  --pf-t--global--spacer--action--vertical--plain: var(--pf-t--global--spacer--sm);
   --pf-t--global--spacer--action--vertical--spacious: var(--pf-t--global--spacer--md);
   --pf-t--global--spacer--control--horizontal--compact: var(--pf-t--global--spacer--sm);
   --pf-t--global--spacer--control--horizontal--default: var(--pf-t--global--spacer--md);
@@ -454,6 +472,8 @@
   --pf-t--global--spacer--gap--group-to-group--horizontal: var(--pf-t--global--spacer--2xl);
   --pf-t--global--spacer--gap--group-to-group--vertical: var(--pf-t--global--spacer--lg);
   --pf-t--global--spacer--gap--text-to-element--default: var(--pf-t--global--spacer--sm);
+  --pf-t--global--spacer--gutter--default: var(--pf-t--global--spacer--md);
+  --pf-t--global--spacer--inset--page-chrome: var(--pf-t--global--spacer--lg);
   --pf-t--global--text--color--disabled: var(--pf-t--global--color--disabled--200);
   --pf-t--global--text--color--inverse: var(--pf-t--global--text--color--300);
   --pf-t--global--text--color--link--default: var(--pf-t--global--text--color--link--100);
@@ -467,6 +487,8 @@
   --pf-t--global--text--color--status--warning--default: var(--pf-t--global--color--status--warning--200);
   --pf-t--global--text--color--status--warning--hover: var(--pf-t--global--color--status--warning--300);
   --pf-t--global--text--color--subtle: var(--pf-t--global--text--color--200);
+  --pf-t--global--text-decoration--offset--default: var(--pf-t--global--spacer--xs);
+  --pf-t--global--text-decoration--width--default: var(--pf-t--global--border--width--regular);
   --pf-t--global--background--color--control--default: var(--pf-t--global--background--color--primary--default);
   --pf-t--global--border--color--alt: var(--pf-t--global--background--color--primary--default);
   --pf-t--global--border--color--brand--clicked: var(--pf-t--global--color--brand--clicked);
